--- a/app/src/main/res/layout/activity_joinedexchange.xml
+++ b/app/src/main/res/layout/activity_joinedexchange.xml
@@ -63,17 +63,53 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="20dp"
                 android:paddingTop="20dp"
-                android:text="Survey"
+                android:text="Edit Survey"
                 android:textAlignment="center"
                 android:textSize="18sp"
                 android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <Button
+                        android:id="@+id/editBtn"
+                        android:layout_width="50dp"
+                        android:layout_height="35dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_weight="1"
+                        android:text="Edit"
+                        android:textAlignment="center"
+                        android:textSize="10sp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        tools:layout_editor_absoluteY="-13dp" />
+
+                    <Button
+                        android:id="@+id/saveBtn"
+                        android:layout_width="50dp"
+                        android:layout_height="35dp"
+                        android:layout_marginLeft="8dp"
+                        android:text="Save"
+                        android:textSize="10sp"
+                        app:layout_constraintLeft_toRightOf="@+id/editBtn"
+                        tools:layout_editor_absoluteY="6dp" />
+                </android.support.constraint.ConstraintLayout>
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/question1J"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Notes for your gifter"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                tools:layout_editor_absoluteX="8dp"
+                tools:layout_editor_absoluteY="516dp" />
 
             <EditText
                 android:id="@+id/q1AnsJ"
